[package]
name = "axial"
version = "0.1.0"
authors = ["sirkibsirkib <christopher.esterhuyse@gmail.com>"]


license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sirkibsirkib/axial"
keywords = ["network", "message", "asynch", "channel", "central"]
description = """
A channel-like abstraction over single-server distributed systems.
Axial abstracts away the details of:
1. Newcomer client identification & authentication
2. Message serialization & deserialization
3. Server-side broadcast, multicast
"""

[dependencies]
magnetic = "2.0.0"
trailing_cell = "0.3.0"
serde = "1.0.27"
serde_derive = "1.0.27"
bincode = "0.9.2"
byteorder = "1.2.1"
crypto-hash = "0.3.0"
bidir-map = "1.0.0"
rand = "0.4"
lazy_static = "1.0.0"